# webos

./: .gitignore  Cargo.toml  README.md
.claude/: launch.json
scripts/: mock_mcp_http.py  mock_mcp_stdio.py  smoke.py  smoke_connectors.py  test_chat.py  test_compose.py  test_compose_flat.py  test_conn_auth.py  test_files_mount.py  test_graphql_conn.py  test_library.py  test_mcp.py  test_mcp_http.py  test_persistence.py  test_routines.py  test_ui_patch.py  verify_library_live.py  verify_linear_fix.py
src/: caps.rs  chat.rs  connectors.rs  egress.rs  gate.rs  library.rs  main.rs  mcp.rs  model.rs  policy.rs  routines.rs  secrets.rs  settings.rs  surface.rs
tasks/: lessons.md  todo.md
ui/: gen-prompt.mjs  package-lock.json  package.json  tsconfig.json  vite.config.ts
ui/src/: catalog.ts  surface.css  surface.tsx
web/: catalog-prompt.txt  index.html  shell.js  style.css  surface.css  surface.js
